@@ -1,4 +1,5 @@
 5.1
+ * Prohibit counter column access in Accord transactions (CASSANDRA-18987)
  * Add Accord configuration stub (CASSANDRA-18221)
  * Improve transaction statement validation (CASSANDRA-18302)
  * Add support for prepared statements for accord transactions (CASSANDRA-18299)
